--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
     "description": "A collection of handy React snippets.",
     "type": "module",
     "private": true,
-    "scripts": {},
+    "scripts": {
+        "prepare": "husky",
+        "format": "prettier --write ."
+    },
     "author": "DevMaffi",
     "license": "MIT",
     "devDependencies": {
-        "@winnerpc/prettier-config": "2025.2.4",
+        "@winnerpc/prettier-config": "2025.3.3",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.0.0",
         "prettier": "3.5.3"
     }
 }
